# python-project-50

./: .gitignore  Makefile  README.md  file4.json  file4.yaml  pyproject.toml
.github/workflows/: hexlet-project-CI.yml
gendiff/: __init__.py  engine.py  parser.py
gendiff/formatters/: json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: engine.py  gendiff.py  generate_diff.py
tests/: test_gendiff.py
tests/fixtures/: file4.yaml  nested_json.txt
